# djLint

./: _file_field.html  _list_page_types_usage.html  _page_title_column_header.html  add.html  admin_base.html  ancestor_privacy.html  avatar.html  base.html  blog.html  breadcrumbs.html  chooser.html  clearable_file_input.html  compare.html  confirm_bulk_delete.html  confirm_delete.html  confirm_duplicate_upload.html  create.html  create_task.html  csscompare.py  dialog.html  edit.html  edit_task.html  field.html  formatted_permissions.html  history_results.html  index.html  index_results.html  list_items_with_no_access.html  list_submissions.html  listing_results.html  locked_pages.html  login.html  model_detail.html  package.json  page.html  page_breadcrumbs.html  page_edit_header.html  page_listing_header.html  page_types_usage.html  preview.html  (+16 more)
src/djlint/: __init__.py  __main__.py  csscompare.py  helpers.py  lint.py  output.py  reformat.py  rules.yaml  schema.yaml  settings.py  src.py
tests/: conftest.py  test_cli.py
tests/test_config/: test_blank_line_after_tag.py  test_blank_line_before_tag.py  test_close_void_tags.py  test_custom_blocks.py  test_custom_html.py  test_format_attribute_template_tags.py  test_format_css.py  test_format_js.py  test_ignore_blocks.py  test_ignore_case.py  test_indent.py  test_line_break_after_multiline_tag.py  test_max_attribute_length.py  test_max_blank_lines.py  test_max_line_length.py  test_preserve_blank_lines.py  test_preserve_leading_space.py
tests/test_django/: test_asset.py  test_blocktrans.py  test_blocktrans_trimmed.py  test_comments.py  test_filter.py  test_for.py  test_html_tags_in_template_tag.py  test_if.py  test_ifchanged.py  test_include.py  test_load.py  test_quoted.py  test_spaceless.py  test_tag_spaces.py  test_templatetag.py  test_thumbnail.py  test_verbatim.py  test_with.py
tests/test_djlint/: test_cssstyle.py  test_djlint.py  test_ignore.py  test_siglequotes.py
tests/test_golang/: test_if.py  test_range.py
tests/test_handlebars/: test_each.py  test_else.py  test_with.py
tests/test_html/: test_alpinejs.py  test_attributes.py  test_aurelia.py  test_basics.py  test_bracket_same_line.py  test_case.py  test_cdata.py  test_comments.py  test_css.py  test_doctype_declarations.py  test_ignored.py  test_interpolation.py  test_next_line_empty.py  test_selfclosing.py  test_single_attribute_per_line.py  test_srcset.py  test_svg.py  test_symbol_entities.py  test_tag_code.py  test_tag_dd.py  test_tag_details_summary.py  (+13 more)
(+45 files in other folders)
