[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool]

[tool.poetry]
name="djlint"
version="1.35.12"
description="HTML Template Linter and Formatter"
license="GPL-3.0-or-later"
authors=["Christopher Pickering"]
maintainers=["Christopher Pickering", "monosans"]
readme="README.md"
repository="https://github.com/djlint/djLint"
documentation="https://djlint.com"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: OS Independent",
    ]
packages = [
    { include = "djlint", from = "src" },
]
include = ["rules.yaml"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
colorama = "^0.4.6"
cssbeautifier = "^1.15.1"
html-tag-names = "^0.1.2"
html-void-elements = "^0.1.0"
jsbeautifier = "^1.15.1"
json5 = "^0.9.25"
pathspec = "^0.12.1"
PyYAML = "^6.0.1"
regex = "^2024.5.15"
tomli = { version = "^2.0.1", python = "<3.11" }
tqdm = "^4.66.4"
beautifulsoup4 = "^4.12.3"
joblib = "^1.4.2"
py-w3c = "^0.3.1"
cssutils = "^2.11.1"
platformdirs = "^4.2.2"
pyupgrade = "^3.16.0"

[tool.poetry.scripts]
djlint = "djlint:main"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
coverage = "^7.5.4"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.5.0"
mypy = "^1.10.1"
types-pyyaml = "^6.0.12.8"
tox = "^4.15.1"

[tool.black]
max_line_length = 99
quiet = true

[tool.isort]
profile = "black"
quiet = true

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "A",
    "A001",
    "ANN",
    "ARG",
    "B",
    "B904", # B904 Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling,
    "BLE001", # Do not catch blind exception: `Exception`
    "C",
    "COM812",
    "D",
    "DTZ",
    "E501",   # line too long, handled by black
    "E999",
    "ERA",
    "FBT",
    "FIX",
    "G002",
    "G004",
    "INP",
    "INT",
    "ISC",
    "N",
    "PERF",
    "PGH",
    "PLE",
    "PLR",
    "PLR",
    "PLW",
    "PT011",
    "PTH",
    "PYI",
    "RET",
    "RUF",
    "S",
    "SIM",
    "SLF",
    "T",
    "TD",
    "TRY",
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

lint.unfixable = []
